<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroUser">

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="545dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <TextView
            android:id="@+id/textRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtRegEmpleados"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:foregroundGravity="center"
            android:gravity="start|center_horizontal"
            android:hint="@string/txtNombre"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/editTextApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="start|center_horizontal"
            android:hint="@string/txtApellido"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/editTextIdentificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="start|center_horizontal"
            android:hint="@string/txtIdentificación"
            android:inputType="numberDecimal"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="start|center_horizontal"
            android:hint="@string/txtTelefono"
            android:inputType="phone"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/editTextDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/txtDireccion"
            android:inputType="textPostalAddress"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light" />

        <EditText
            android:id="@+id/editTextCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/txtCorreo"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/editTextContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="start|center_horizontal"
            android:hint="@string/txtRegContrasena"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/editTextConfContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="start|center_horizontal"
            android:hint="@string/txtRegConfContrasena"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <Button
            android:id="@+id/buttonReg"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#FF5722"
            android:foregroundGravity="fill_vertical|right"
            android:onClick="registros"
            android:text="@string/btnRegistroEmp"
            android:textColor="@android:color/background_light" />

        <!--<Spinner
            android:id="@+id/DDL_Identificacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:dropDownWidth="wrap_content"
            android:entries="@array/tipodocumento"
            android:gravity="start|center_horizontal" />-->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>