<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="471dp"
        android:background="#B0000000"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewUsuarioApe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:text="@string/txtmantenimiento"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <EditText
                    android:id="@+id/txt_correo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:ems="10"
                    android:hint="@string/txtUsuario"
                    android:inputType="textEmailAddress"
                    android:shadowColor="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#FFFFFFFF"
                    android:textColorLink="#FFFFFF"
                    android:textCursorDrawable="@null" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <EditText
                    android:id="@+id/txt_contrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:ems="10"
                    android:hint="@string/txtContraseña"
                    android:inputType="textPassword"
                    android:shadowColor="#FFFFFF"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textColorLink="#FFFFFF"
                    android:textCursorDrawable="@null" />

                <Button
                    android:id="@+id/btn_Login"
                    style="@android:style/Widget.Button.Inset"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btniniciar_sesion"
                    android:textColor="#000000"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorLink="#FFFFFF" />

                <Button
                    android:id="@+id/btnRegistro"
                    style="@android:style/Widget.Button.Inset"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:onClick="irARegistro"
                    android:text="@string/btnRegistro" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="irARecuperar"
                    android:text="@string/txtrestaurar"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#00FFFFFF"
                    android:textColorHint="#00FFFFFF"
                    android:textColorLink="#00FFFFFF"
                    android:textStyle="italic" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>