<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    tools:context=".Perfil">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="543dp"
        android:background="@color/common_google_signin_btn_text_light_default"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_Salir"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:onClick="cerrarSesion"
            android:text="Salir"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="109dp"
                android:layout_height="106dp"
                app:srcCompat="@drawable/imgadmi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="141dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tV_Administrador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Administrador"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tV_Nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="37dp"
                        android:layout_weight="1"
                        android:textColor="@color/common_google_signin_btn_text_dark_default"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tV_Apellido"
                        android:layout_width="wrap_content"
                        android:layout_height="37dp"
                        android:layout_weight="1"
                        android:textColor="@color/common_google_signin_btn_text_dark_default"
                        android:textSize="18sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tV_DocumentText"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="1"
                    android:text="@string/txtIdentificación"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tV_Documento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tV_Telefono"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:text="@string/txtTelefono"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editT_Telefono"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tV_Direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDireccion"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editT_Direccion"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <Button
            android:id="@+id/btb_Modificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="modificar"
            android:text="Modificar datos " />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>